data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_504.wast
;; 5. **Test Description:**    - Construct a loop with a `br_if` that conditionally branches out based on a stack value. Introduce a mismatch in the type of the stack value before the condition check.    - **Constraint Checking:** Checks if the implementation accurately verifies the stack value's type before executing the conditional branch.    - **Relation to Infinite Loops:** An incorrect type check may prevent the branch from executing, leading to an infinite loop.

(assert_invalid
  (module
    (func
      (block
        (loop
          (i32.const 0)
          (f32.const 1.0)  ;; Type mismatch introduced
          (br_if 1 (i32.eqz))  ;; Condition based on stack value
        )
      )
    )
  )
  "type mismatch"
)